--- a/Sandbox/Sandbox.vcxproj
+++ b/Sandbox/Sandbox.vcxproj
@@ -72,31 +72,39 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(ProjectDir)..;$(IncludePath)</IncludePath>
+    <IncludePath>$(DXSDK_DIR)\Include;$(ProjectDir)..;$(IncludePath)</IncludePath>
     <SourcePath>$(ProjectDir)..;$(SourcePath)</SourcePath>
     <OutDir>$(ProjectDir)build\$(PlatformShortName)\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)temp\$(PlatformShortName)\$(Configuration)\</IntDir>
+    <TargetName>OsmiumSandbox</TargetName>
+    <LibraryPath>$(DXSDK_DIR)\Lib\$(PlatformShortName);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(ProjectDir)..;$(IncludePath)</IncludePath>
+    <IncludePath>$(DXSDK_DIR)\Include;$(ProjectDir)..;$(IncludePath)</IncludePath>
     <SourcePath>$(ProjectDir)..;$(SourcePath)</SourcePath>
     <OutDir>$(ProjectDir)build\$(PlatformShortName)\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)temp\$(PlatformShortName)\$(Configuration)\</IntDir>
+    <TargetName>OsmiumSandbox</TargetName>
+    <LibraryPath>$(DXSDK_DIR)\Lib\$(PlatformShortName);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(ProjectDir)..;$(IncludePath)</IncludePath>
+    <IncludePath>$(DXSDK_DIR)\Include;$(ProjectDir)..;$(IncludePath)</IncludePath>
     <SourcePath>$(ProjectDir)..;$(SourcePath)</SourcePath>
     <OutDir>$(ProjectDir)build\$(PlatformShortName)\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)temp\$(PlatformShortName)\$(Configuration)\</IntDir>
+    <TargetName>OsmiumSandbox</TargetName>
+    <LibraryPath>$(DXSDK_DIR)\Lib\$(PlatformShortName);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(ProjectDir)..;$(IncludePath)</IncludePath>
+    <IncludePath>$(DXSDK_DIR)\Include;$(ProjectDir)..;$(IncludePath)</IncludePath>
     <SourcePath>$(ProjectDir)..;$(SourcePath)</SourcePath>
     <OutDir>$(ProjectDir)build\$(PlatformShortName)\$(Configuration)\</OutDir>
     <IntDir>$(ProjectDir)temp\$(PlatformShortName)\$(Configuration)\</IntDir>
+    <TargetName>OsmiumSandbox</TargetName>
+    <LibraryPath>$(DXSDK_DIR)\Lib\$(PlatformShortName);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -107,7 +115,7 @@
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -122,7 +130,7 @@
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -137,7 +145,7 @@
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
@@ -152,7 +160,7 @@
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -160,11 +168,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\sandbox_overlay.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\vs\osmium.vcxproj">
       <Project>{ec2408f2-0cdd-4934-9847-48032a4f48f8}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\sandbox_overlay.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
